--- a/pages/index.module.sass
+++ b/pages/index.module.sass
@@ -1,5 +1,7 @@
 .upperClass
-  font-size: 300%
+  background-color: yellow
+  color: green
 
   & .underClass
-    font-size: 20%
+    background-color: green
+    color: yellow
